--- a/catalog.html
+++ b/catalog.html
@@ -97,17 +97,32 @@
               class="catalog-filter"
               action="https://echo.htmlacademy.ru/"
               method="get">
-              <label class="catalog-filter-title" for="price-range"
-                >Стоимость</label>
-                <label for="price-range"></label>
-              <input
-                type="range"
-                id="price-range"
-                name="price-range"
-                min="0"
-                max="8000"
-              />
-              <hr />
+
+              <fieldset class="catalog-filter-group">
+                <legend class="catalog-filter-title">Стоимость</legend>
+
+                <div class="range">
+                  <div class="range-scale">
+                    <div class="range-bar" style="left: 0; width: 136px">
+                      <button class="range-toggle toggle-min">
+                        <span class="visually-hidden">Изменить минимальную цену.</span>
+                      </button>
+                      <button class="range-toggle toggle-max">
+                        <span class="visually-hidden">Изменить максимальную цену.</span>
+                      </button>
+                    </div>
+                  </div>
+
+                  <div class="range-wrapper-inputs">
+                    <label class="catalog-filter-label">
+                      от <input class="range-input" type="number" value="0" name="min-price"> ₽
+                    </label>
+                    <label class="catalog-filter-label">
+                      до <input class="range-input" type="number" value="5000" name="max-price" style="width: 37px"> ₽
+                    </label>
+                  </div>
+                </div>
+              </fieldset>
 
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Цвет</legend>
@@ -115,47 +130,53 @@
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input
-                        class="control-input"
                         type="checkbox"
                         name="black"
                         checked
                       />
-                      Черный
+                      <span class="checkmark"></span>
+                      <span>Черный</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
                       <input
-                        class="control-input"
                         type="checkbox"
                         name="white"
-                        checked
+                        disabled
                       />
-                      Белый
+                      <span class="checkmark"></span>
+                      <span>Белый</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="blue" />
-                      Синий
+                      <input
+                        type="checkbox"
+                        name="blue"
+                      />
+                      <span class="checkmark"></span>
+                      <span>
+                        Синий
+                      </span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="red" />
-                      Красный
+                      <input type="checkbox" name="red" />
+                      <span class="checkmark"></span>
+                      <span>Красный</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="pink" />
-                      Розовый
+                      <input type="checkbox" name="pink" />
+                      <span class="checkmark"></span>
+                      <span>Розовый</span>
                     </label>
                   </li>
                 </ul>
               </fieldset>
-
-              <hr />
 
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Bluetooth</legend>
@@ -166,8 +187,10 @@
                         class="control-input"
                         type="radio"
                         name="bluetooth-yes"
+                        disabled
                       />
-                      Есть
+                      <span class="radiomark"></span>
+                      <span>Есть</span>
                     </label>
                   </li>
                   <li class="catalog-filter-item">
@@ -177,7 +200,8 @@
                         type="radio"
                         name="bluetooth-no"
                       />
-                      Нет
+                      <span class="radiomark"></span>
+                      <span>Нет</span>
                     </label>
                   </li>
                 </ul>
@@ -205,14 +229,8 @@
                   height="7px"/>
               </select>
               <div class="sort-icons">
-                <img
-                  class="icons"
-                  src="images/icons-sort-up.svg"
-                />
-                <img
-                  class="icons"
-                  src="images/icons-sort-down.svg"
-                />
+                <a href="" class="sort-icon-up"></a>
+                <a href="#" class="sort-icon-down"></a>
               </div>
             </div>
 
