--- a/catalog.html
+++ b/catalog.html
@@ -3,28 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <title>Каталог</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css"/>
+    <link rel="icon" href="icons/favicon.ico">
   </head>
   <body>
     <header class="page-header wrapper catalog-header">
       <div class="page-header-wrapper">
         <h1 class="visually-hidden">Интернет магазин техники Device</h1>
-        <a class="status status-header" href="index.html"><img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device"></a>
+        <a class="status status-header" href="index.html"><img class="logo" src="images/logo-device.svg" width="145" height="36" alt="Логотип интернет магазина Device"></a>
 
         <div class="navigation">
           <div class="navigation-section">
             <div class="navigation-section-item">
               <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
                 <input class="search" placeholder="Поиск по сайту" type="search" name="search">
-                <img class="search-icon" src="images/icons-loupe.svg" width="16px" height="16px">
+                <img alt="Лупа" class="search-icon" src="images/icons-loupe.svg" width="16" height="16">
                 <button class="find-button" type="submit">Найти</button>
               </form>
               <a href="#" class="navigation-top-section-enter status">
                 <img
+                  alt="Профиль"
                   class="icons"
                   src="images/icons-user.svg"
-                  width="13px"
-                  height="12px"
+                  width="13"
+                  height="12"
                 />
                 <span class="navigation-user-link">Коля Петухов</span>
                 <a class="not-active status" href="#">
@@ -35,12 +37,12 @@
 
             <div class="navigation-section-item">
               <a class="status" href="#">
-                <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
+                <img alt="Сравнить" class="icons" src="images/icons-compare.svg" width="10" height="12">
                 <span class="navigation-user-link">Сравнить</span>
               </a>
 
               <a href="#" class="navigation-section-item-link status">
-                <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
+                <img alt="Корзина" class="icons" src="images/icons-basket.svg" width="16" height="14">
                 <div class="badge">
                    2
                 </div>
@@ -52,7 +54,7 @@
           <nav class="navigation-section">
             <a href="catalog.html" class="navigation-section-item navigation-section-short status">
               <span class="navigation-link">Каталог товаров</span>
-              <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
+              <img alt="Плюс" class="plus" src="images/icons-batton-plus.svg" width="50" height="50">
             </a>
 
             <ul class="navigation-section-item navigation-section-wide">
@@ -76,13 +78,13 @@
         <h1 class="main-title catalog-title">Моноподы для селфи</h1>
           <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
-              <a class="status" href="index.html">Главная</a>
+              <a class="status-link" href="index.html">Главная</a>
             </li>
             <li class="breadcrumbs-item">
-              <a class="status" href="#">Каталог товаров</a>
+              <a class="status-link" href="#">Каталог товаров</a>
             </li>
             <li class="breadcrumbs-item">
-              <a class="status">Моноподы для селфи</a>
+              <a class="status-link">Моноподы для селфи</a>
             </li>
           </ul>
       </header>
@@ -103,7 +105,7 @@
 
                 <div class="range">
                   <div class="range-scale">
-                    <div class="range-bar" style="left: 0; width: 136px">
+                    <div class="range-bar" style="left: 0; width: 136">
                       <button class="range-toggle toggle-min">
                         <span class="visually-hidden">Изменить минимальную цену.</span>
                       </button>
@@ -118,7 +120,7 @@
                       от <input class="range-input" type="number" value="0" name="min-price"> ₽
                     </label>
                     <label class="catalog-filter-label">
-                      до <input class="range-input" type="number" value="5000" name="max-price" style="width: 37px"> ₽
+                      до <input class="range-input" type="number" value="5000" name="max-price" style="width: 37"> ₽
                     </label>
                   </div>
                 </div>
@@ -223,10 +225,11 @@
                 <option value="cheap">Сначала дешёвые</option>
                 <option value="expensive">Сначала дорогие</option>
                 <img
+                  alt="Cтрелка вниз"
                   class="icons"
                   src="images/icons-switch.svg"
-                  width="4px"
-                  height="7px"/>
+                  width="4"
+                  height="7"/>
               </select>
               <div class="sort-icons">
                 <a href="" class="sort-icon-up"></a>
@@ -243,8 +246,8 @@
                       class="product-card-image"
                       src="images/product-amateur-selfie-stick.jpg"
                       alt="Cелфи-палка"
-                      width="360px"
-                      height="380px"/>
+                      width="360"
+                      height="380"/>
 
                       <div class="product-card-image-button">
                         <button class="button">
@@ -266,8 +269,8 @@
                         class="product-card-image"
                         src="images/product-professional-selfie-stick.jpg"
                         alt="Cелфи-палка"
-                        width="360px"
-                        height="380px"
+                        width="360"
+                        height="380"
                       />
 
                       <div class="product-card-image-button">
@@ -290,8 +293,8 @@
                         class="product-card-image"
                         src="images/product-unsinkable-selfie-stick.jpg"
                         alt="Cелфи-палка"
-                        width="360px"
-                        height="380px"
+                        width="360"
+                        height="380"
                       />
 
                       <div class="product-card-image-button">
@@ -314,8 +317,8 @@
                         class="product-card-image"
                         src="images/product-selfie-stick-follow-me.jpg"
                         alt="Cелфи-палка"
-                        width="360px"
-                        height="380px"
+                        width="360"
+                        height="380"
                       />
 
                       <div class="product-card-image-button">
@@ -356,9 +359,9 @@
 
     <footer class="page-footer">
       <div class="page-footer-wrapper wrapper">
-        <a class="status" href="index.html"><img class="logo-footer" src="images/logo-device-yellow.svg" width="145px" height="36px" alt="Логотип интернет магазина Device"></a>
+        <a class="status" href="index.html"><img class="logo-footer" src="images/logo-device-yellow.svg" width="145" height="36" alt="Логотип интернет магазина Device"></a>
         <address class="contacts-footer contacts-adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
-        <img class="line" src="images/icons-line.svg" width="80px" height="7px">
+        <img alt="Линия" class="line" src="images/icons-line.svg" width="80" height="7">
         <div class="page-footer-top">
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -377,19 +380,19 @@
             <li class="footer-social-item">
               <a class="social-button status-social" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram</span>
-                <img src="images/social-networks-telegram.svg" width="14px" height="12px">
+                <img alt="Телеграм" src="images/social-networks-telegram.svg" width="14" height="12">
               </a>
             </li>
             <li class="footer-social-item">
               <a class="social-button status-social" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube</span>
-                <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
+                <img alt="YouTube" src="images/social-networks-you-tube.svg" width="16" height="11">
               </a>
             </li>
             <li class="footer-social-item">
               <a class="social-button status-social" href="https://twitter.com/htmlacademy_ru">
                 <span class="visually-hidden">Twitter</span>
-                <img src="images/social-networks-twitter.svg" width="15px" height="14px">
+                <img alt="Триттер" src="images/social-networks-twitter.svg" width="15" height="14">
               </a>
             </li>
           </ul>
