--- a/index.html
+++ b/index.html
@@ -4,35 +4,36 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="icons/favicon.ico">
   </head>
   <body>
     <header class="page-header wrapper">
         <h1 class="visually-hidden">Интернет магазин техники Device</h1>
-        <a class="status status-header" href="index.html"><img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device"></a>
+        <a class="status status-header" href="index.html"><img class="logo" src="images/logo-device.svg" width="145" height="36" alt="Логотип интернет магазина Device"></a>
 
         <div class="navigation">
           <div class="navigation-section">
             <div class="navigation-section-item">
               <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
                 <input class="search" placeholder="Поиск по сайту" type="search" name="search" id="search">
-                <label for="search"><img class="search-icon" src="images/icons-loupe.svg" width="16px" height="16px"></label>
+                <label for="search"><img alt="Лупа" class="search-icon" src="images/icons-loupe.svg" width="16" height="16"></label>
                 <button class="find-button" type="submit">Найти</button>
               </form>
               <a href="#" class="navigation-top-section-enter status">
-                <img class="icons" src="images/icons-user.svg" width="13px" height="12px">
+                <img alt="Профиль" class="icons" src="images/icons-user.svg" width="13" height="12">
                 <span class="navigation-user-link">Войти</span>
               </a>
             </div>
 
             <div class="navigation-section-item">
               <a href="#" class="status">
-                <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
+                <img alt="Сравнить" class="icons" src="images/icons-compare.svg" width="10" height="12">
                 <span class="navigation-user-link">Сравнить</span>
               </a>
 
               <div class="popover-wrapper">
                 <a href="#" class="navigation-section-item-link status">
-                  <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
+                  <img alt="Корзина" class="icons" src="images/icons-basket.svg" width="16" height="14">
                   <div class="badge">
                     2
                   </div>
@@ -126,7 +127,7 @@
       <section class="slider wrapper">
         <div class="slider-item slider-item-active">
           <div class="slider-img">
-            <img src="images/slider-quadrocopter.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
+            <img src="images/slider-quadrocopter.png" width="560" height="560" alt="Квадракоптер с мощным лазером">
           </div>
           <div class="slider-item-section">
             <div class="slider-number">
@@ -163,7 +164,7 @@
 
         <div class="slider-item">
           <div class="slider-img">
-            <img src="images/slider-fitnes-bracelets.png" width="560px" height="560px" alt="Фитнес-браслет">
+            <img src="images/slider-fitnes-bracelets.png" width="560" height="560" alt="Фитнес-браслет">
           </div>
           <div class="slider-item-section">
             <div class="slider-number">
@@ -192,7 +193,7 @@
 
         <div class="slider-item">
           <div class="slider-img">
-            <img src="images/slider-selfie-stick.png" width="560px" height="560px" alt="Палка для селффи">
+            <img src="images/slider-selfie-stick.png" width="560" height="560" alt="Палка для селффи">
           </div>
           <div class="slider-item-section">
             <div class="slider-number">
@@ -240,10 +241,10 @@
         </div>
         <div class="slider-arrows">
           <button class="arrow arrow-left status">
-            <img src="images/icons-arrow-left.svg" width="20px" height="60px">
+            <img alt="Назад" src="images/icons-arrow-left.svg" width="20" height="60">
           </button>
           <button class="arrow arrow-right status">
-            <img src="images/icons-arrow-right.svg" width="20px" height="60px">
+            <img alt="Вперед" src="images/icons-arrow-right.svg" width="20" height="60">
           </button>
         </div>
       </section>
@@ -358,19 +359,19 @@
 
       <button class="delivery-section wrapper">
         <div class="delivery-icon-wrapper">
-          <img class="delivery-icon" src="images/icons-car.svg" width="47px" height="31px">
+          <img alt="Доставка" class="delivery-icon" src="images/icons-car.svg" width="47" height="31">
         </div>
         <div class="delivery-section-item">Доставим редкий товар под заказ</div>
         <div class="delivery-notice-wrapper">
           <div class="delivery-notice">
-            <img src="images/icons-notice.svg">
+            <img alt="Уведомление" src="images/icons-notice.svg">
           </div>
         </div>
       </button>
 
       <section class="section-contact wrapper">
         <div class="contacts">
-          <img src="images/icons-line-black.svg" width="84px" height="7px">
+          <img alt="Линия" src="images/icons-line-black.svg" width="84" height="7">
           <h2 class="main-title contact-title">О нас</h2>
           <p class="text contacts-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
           <p class="text contacts-text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
@@ -385,7 +386,7 @@
         </div>
 
         <div class="contacts">
-          <img src="images/icons-line-black.svg" width="84px" height="7px">
+          <img alt="Линия" src="images/icons-line-black.svg" width="84" height="7">
           <h2 class="main-title">Контакты</h2>
           <p class="text contacts-text">Вы можете забрать товар сами, заехав в наш офис.
             Заодно сможете проверить работоспособность покупки. </p>
@@ -417,7 +418,7 @@
               <input class="subscribe-button" type="submit" value="Подписаться">
             </form>
             <div class="section-distribution-free">
-              <img class="icons" src="images/icons-tick-green.svg" width="16px" height="16px">
+              <img alt="Галочка" class="icons" src="images/icons-tick-green.svg" width="16" height="16">
               <div>
                 Это бесплатно
               </div>
@@ -430,9 +431,10 @@
 
     <footer class="page-footer">
       <div class="page-footer-wrapper wrapper">
-        <a class="status" href="index.html"><img class="logo-footer" src="images/logo-device-yellow.svg" width="145px" height="36px" alt="Логотип интернет магазина Device"></a>
+        <a class="status" href="index.html">
+          <img class="logo-footer" src="images/logo-device-yellow.svg" width="145" height="36" alt="Логотип интернет магазина Device"></a>
         <address class="contacts-footer contacts-adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
-        <img class="line" src="images/icons-line.svg" width="80px" height="7px">
+        <img alt="Линия" class="line" src="images/icons-line.svg" width="80" height="7">
         <div class="page-footer-top">
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -451,19 +453,19 @@
             <li class="footer-social-item">
               <a class="social-button status-social" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Telegram</span>
-                <img src="images/social-networks-telegram.svg" width="14px" height="12px">
+                <img alt="Телеграм" src="images/social-networks-telegram.svg" width="14" height="12">
               </a>
             </li>
             <li class="footer-social-item">
               <a class="social-button status-social" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube</span>
-                <img src="images/social-networks-you-tube.svg" width="16px" height="11px">
+                <img alt="YouTube" src="images/social-networks-you-tube.svg" width="16" height="11">
               </a>
             </li>
             <li class="footer-social-item">
               <a class="social-button status-social" href="https://twitter.com/htmlacademy_ru">
                 <span class="visually-hidden">Twitter</span>
-                <img src="images/social-networks-twitter.svg" width="15px" height="14px">
+                <img alt="Твиттер" src="images/social-networks-twitter.svg" width="15" height="14">
               </a>
             </li>
           </ul>
@@ -476,7 +478,7 @@
 
     </footer>
 
-    <div class="delivery-modal-wrapper" style="display: none;">
+    <div class="delivery-modal-wrapper">
       <div class="delivery-modal">
         <div class="delivery-modal-header">
           <span class="delivery-modal-header-title">
