--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
     </footer>
 
-    <div class="delivery-modal-wrapper">
+    <div class="delivery-modal-wrapper modal-closed">
       <div class="delivery-modal">
         <div class="delivery-modal-header">
           <span class="delivery-modal-header-title">
@@ -521,9 +521,7 @@
               <button class="counter-button counter-minus">
                 <img src="images/icon-minus.svg" alt="">
               </button>
-              <div class="counter-number">
-                1
-              </div>
+              <input class="counter-number" type="number" value="1"  />
               <button class="counter-button counter-plus">
                 <img src="images/icon-plus.svg" alt="">
               </button>
